crates/toml_edit/fixtures/invalid/control/multi-us.stderr
TOML parse error at line 1, column 19
  |
1 | multi-us = """null"""
  |                   ^
Invalid multiline basic string
